# qualcomm___qcom-test-automation-controller

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  build.bat  build.sh
.github/: tac-configuration-schema.json
.github/workflows/: build.yml  validate-configurations.yml
configurations/: TAC_FT232H_81.tcnf  TAC_FTDI_15.tcnf  TAC_FTDI_16.tcnf  TAC_FTDI_18.tcnf  TAC_FTDI_19.tcnf  TAC_FTDI_21.tcnf  TAC_FTDI_22.tcnf  TAC_FTDI_27.tcnf  TAC_FTDI_30.tcnf  TAC_FTDI_32.tcnf  TAC_FTDI_33.tcnf  TAC_FTDI_36.tcnf  TAC_FTDI_37.tcnf  TAC_FTDI_38.tcnf  TAC_FTDI_39.tcnf  TAC_FTDI_40.tcnf  TAC_FTDI_41.tcnf  TAC_FTDI_42.tcnf  TAC_FTDI_45.tcnf  TAC_FTDI_48.tcnf  TAC_FTDI_49.tcnf  TAC_FTDI_51.tcnf  TAC_FTDI_52.tcnf  TAC_FTDI_55.tcnf  TAC_FTDI_56.tcnf  TAC_FTDI_60.tcnf  TAC_FTDI_63.tcnf  TAC_FTDI_64.tcnf  TAC_FTDI_65.tcnf  TAC_FTDI_67.tcnf  TAC_FTDI_69.tcnf  TAC_FTDI_70.tcnf  TAC_FTDI_71.tcnf  TAC_FTDI_72.tcnf  TAC_FTDI_73.tcnf  TAC_FTDI_77.tcnf  TAC_FTDI_78.tcnf  TAC_PIC32CXAuto_54.tcnf  TAC_PSOC_14.tcnf  TAC_PSOC_17.tcnf  (+10 more)
docs/getting-started/: 01-Build-Using-Qt-Creator.md
examples/C#/: Program.cs
examples/C++/: TACExample.cpp
examples/Java/: TACExample.java
examples/MCP/: README.md  setup.bat  setup.sh  tacdev_mcp_client.py  tacdev_mcp_server.py
examples/MCP/sse/: README.md  config.yaml  requirements.txt  setup.bat  setup.sh  tacdev_mcp_client.py  tacdev_mcp_server.py
examples/MCP/stdio/: README.md  setup.bat  setup.sh  tacdev_mcp_client.py  tacdev_mcp_server.py
examples/Python/: AlpacaAutomationTest.py
interfaces/: CMakeLists.txt
interfaces/C++/TACDev/: CMakeLists.txt  TACDev.cpp  TACDev.h  TACDevCore.cpp  TACDevCore.h
interfaces/Python/: setup.bat  setup.py  setup.sh
interfaces/Python/TACDev/: TACDev.py  __init__.py
src/applications/: CMakeLists.txt
src/applications/device-catalog/: CMakeLists.txt  DeviceCatalog.cpp  DeviceCatalog.h  DeviceCatalogApplication.cpp  DeviceCatalogApplication.h  DeviceSelectionDialog.cpp  DeviceSelectionDialog.h  main.cpp
src/applications/device-catalog/resources/: DeviceCatalog.desktop  DeviceCatalog.rc
src/applications/devlist/: CMakeLists.txt  main.cpp
src/applications/ftdi-check/: CMakeLists.txt  FTDICheckApplication.cpp  FTDICheckApplication.h  FTDICheckCommandLine.cpp  FTDICheckCommandLine.h  main.cpp
src/applications/ftdi-check/resources/: FTDICheck.desktop  FTDICheck.rc
src/applications/programmers/: CMakeLists.txt
src/applications/programmers/lite-programmer/: CMakeLists.txt  ProgrammerCommandLine.cpp  ProgrammerCommandLine.h  main.cpp
src/applications/programmers/psoc-programmer/: PSOCProgrammer.pro  PSOCProgrammerCmdLine.h  main.cpp
src/applications/tac-configuration-editor/: ButtonEditor.cpp  ButtonEditor.h  CMakeLists.txt  CodeEditor.cpp  CodeEditor.h  ConfigEditorApplication.cpp  ConfigEditorApplication.h  ConfigWindow.cpp  ConfigWindow.h  ConfigWindow.ui  CreateConfigurationDialog.cpp  CreateConfigurationDialog.h  EditorView.cpp  EditorView.h  FTDIEditorView.cpp  FTDIEditorView.h  ManageTabsDialog.cpp  ManageTabsDialog.h  PIC32CXEditorView.cpp  PIC32CXEditorView.h  PSOCEditorView.cpp  PSOCEditorView.h  PineCommandLine.cpp  PineCommandLine.h  TACPreviewWindow.cpp  TACPreviewWindow.h  TabEditorDialog.cpp  TabEditorDialog.h  main.cpp
src/applications/tac-configuration-editor/resources/: TACConfigEditor.desktop  TACConfigEditor.rc
src/applications/tacdump/: CMakeLists.txt  main.cpp
src/applications/test-automation-controller/: CMakeLists.txt  PreferencesDialog.cpp  PreferencesDialog.h  TACApplication.cpp  TACApplication.h  TACDeviceSelection.cpp  TACDeviceSelection.h  TACWindow.cpp  TACWindow.h  TACWindow.ui  main.cpp
src/applications/test-automation-controller/resources/: TAC.desktop  TAC.rc
src/applications/updatedevicelist/: CMakeLists.txt  UDLCommandLine.cpp  UDLCommandLine.h  UpdateDeviceList.cpp  UpdateDeviceList.h  main.cpp
src/libraries/: CMakeLists.txt
src/libraries/qcommon/: AboutDialog.cpp  AboutDialog.h  AlpacaApplication.cpp  AlpacaApplication.h  ApplicationEnhancements.cpp  CMakeLists.txt  Common.cmake  LEDWidget.cpp  LEDWidget.h  PinLED.cpp  PinLED.h  QCommon.cpp  QCommonGlobal.h
src/libraries/qcommon-console/: AlpacaDefines.h  AlpacaDevice.cpp  AlpacaDevice.h  AlpacaScript.cpp  AlpacaScript.h  AlpacaSettings.cpp  AlpacaSettings.h  AlpacaSharedLibrary.cpp  AlpacaSharedLibrary.h  AppCore.cpp  AppCore.h  BasicColor.cpp  BasicColor.h  Button.cpp  Button.h  ByteCountFormatter.h  CMakeLists.txt  CSV.cpp  CSV.h  CharBit.cpp  CharBit.h  CommDevice.h  CommandGroup.h  Common.cmake  ConsoleApplicationEnhancements.cpp  ConsoleApplicationEnhancements.h  ConsoleInterface.h  DataPoints.h  DateCheckFailEvent.h  DebugBoardType.cpp  DebugBoardType.h  DictionaryFile.cpp  DriveThread.cpp  DriveThread.h  EncryptedString.cpp  EncryptedString.h  ErrorParameter.h  FTDIChipset.cpp  FTDIChipset.h  FTDIDevice.cpp  (+86 more)
src/libraries/qcommon-console/private/: TACDriveThread.cpp  TACDriveThread.h  TACLiteCoder.cpp  TACLiteCoder.h  TACLiteCommand.cpp  TACLiteCommand.h  TACLiteDriveThread.cpp  TACLiteDriveThread.h  TACLiteProtocol.cpp  TACLiteProtocol.h  TACPIC32CXCoder.cpp  TACPIC32CXCoder.h  TACPIC32CXCommand.cpp  TACPIC32CXCommand.h  TACPIC32CXDriveThread.cpp  TACPIC32CXDriveThread.h  TACPIC32CXProtocol.cpp  TACPIC32CXProtocol.h  TACPSOCCoder.cpp  TACPSOCCoder.h  TACPSOCCommand.cpp  TACPSOCCommand.h  TACPSOCDriveThread.cpp  TACPSOCDriveThread.h  TACPSOCProtocol.cpp  TACPSOCProtocol.h
src/libraries/qcommon/resources/: QCResource.qrc
src/libraries/ui-common/: CMakeLists.txt  ColorConversion.h  CustomValidator.cpp  CustomValidator.h  I2CWidget.cpp  I2CWidget.h  MediaPlaybackFrame.cpp  MediaPlaybackFrame.h  TACFrame.cpp  TACFrame.h  TerminalWidget.cpp  TerminalWidget.h  UIGlobalLib.h  UILib.cpp  UserWidget.cpp  UserWidget.h  VariableInput.cpp  VariableInput.h
udev-rules/: 99-QTAC-USB.rules
